Added climbing animation Rebalanced food cost Fixed player/head rotation Added current animation name and cooldowns on the screen

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ loader_version = 0.14.19
 
 mod_version = 1.0.0
 maven_group = net.dravigen
-archives_base_name = let-me-move
+archives_base_name = let_me_move
 
 org.gradle.jvmargs=-Xmx4g
