--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ minecraft_version = 1.6.4
 yarn_mappings = 1.6.4+build.420
 loader_version = 0.14.19
 
-mod_version = 1.0.0
+mod_version = beta-A
 maven_group = net.dravigen
 archives_base_name = let_me_move
 
